--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U medical_user -d medical"]
+      test: [ "CMD-SHELL", "pg_isready -U medical_user -d medical" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -58,7 +58,7 @@ services:
       - VITE_API_TIMEOUT=30000
       - VITE_LOG_LEVEL=info
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000"]
+      test: [ "CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000" ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -105,7 +105,7 @@ services:
   prometheus:
     image: prom/prometheus:v2.47.0
     container_name: prometheus
-    profiles: [observability]
+    profiles: [ observability ]
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
@@ -120,7 +120,7 @@ services:
   grafana:
     image: grafana/grafana:10.1.0
     container_name: grafana
-    profiles: [observability]
+    profiles: [ observability ]
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=admin
     volumes:
@@ -133,7 +133,7 @@ services:
   elasticsearch:
     image: elastic/elasticsearch:8.11.3
     container_name: elasticsearch
-    profiles: [observability]
+    profiles: [ observability ]
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
@@ -148,7 +148,7 @@ services:
   logstash:
     image: elastic/logstash:8.11.3
     container_name: logstash
-    profiles: [observability]
+    profiles: [ observability ]
     volumes:
       - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
       - ./backend/logs:/logs
@@ -162,7 +162,7 @@ services:
   kibana:
     image: elastic/kibana:8.11.3
     container_name: kibana
-    profiles: [observability]
+    profiles: [ observability ]
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
     ports:
@@ -172,12 +172,31 @@ services:
     networks:
       - medical-net
 
+  n8n:
+    image: n8nio/n8n:latest
+    container_name: n8n
+    restart: unless-stopped
+    ports:
+      - "5678:5678"
+    environment:
+      - N8N_HOST=n8n
+      - N8N_PORT=5678
+      - N8N_PROTOCOL=http
+      - WEBHOOK_URL=http://localhost:5678/
+      - GENERIC_TIMEZONE=Asia/Kolkata
+    volumes:
+      - n8n_data:/home/node/.n8n
+    networks:
+      - medical-net
+
 volumes:
   db_data:
   ai_models:
   prometheus_data:
   grafana_data:
   elasticsearch_data:
+  n8n_data:
+
 
 networks:
   medical-net:
